[tool.poetry]
name = "imgsort"
version = "1.0"
description = "Tool designed to sort and organize your photo and video galleries based on their embedded metadata"
authors = ["elihu"]
readme = "README.md"

[tool.poetry.scripts]
imgsort="imgsort.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.12.3"}
pillow = "^11.0.0"
hachoir = "^3.3.0"
piexif = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"